  * Make vmstat plugin more portable (SF#882352).
  * Moved generic netstat to linux-dir, as it is too spesific. Added Solaris
    version of the plugin as well. (SF#882354)
  * Fixed bad debug output (forgotten linebreaks) in munin-node-configure
    (SF#882385).
  * Generic plugins now use printf instead of echo -n, as this is more
    portable (SF#885564)

munin (1.0.0pre1)

  * Renamed from LRRD to Munin.
  
lrrd (0.9.9r6)

  * Added BSDish install-sh to make the installation work
    on both BSD and SysV variants (SF#840744).
  * Plugin linux/iostat modified. Now runs on 2.6, and now "mirrors" i/o like
    eth* et al. (Deb#224113, Deb#223373)
  * Lrrd-client: Don't try to change uid/gid if not running as root.
    (Deb#224300)
  * Lrrd-graph: Only log graphing errors (== less cron-mail).
  * Plugin linux/memory has been improved greatly by Mike Fedyk (Deb#223346)
  * Some plugins fail more gracefully when using uninstalled perl modules.
  * Lrrd-client-configure now prints the reason for suggesting to not use
    a plugin, as long as the plugins gives one.
  * Lrrd-client: Do a fake clean of the environment because of the taint
    checking.
  * Lrrd-client: added configuration option "ignore_file", which takes regex
    for files to ignore (e.g. rpmnew/save) (Deb#224265).
  * New plugin: Alexandre Dupouy contributed "hddtemp".
  * New plugin: Nicolai Langfeldt contributed "bind9".
  * Lrrd-server: dots supported in plugin names.
  * New plugin: snmp wildcard plugin for interface graphing.

lrrd (0.9.9r5)

  * lrrd-nagios: enable/disable notifications.
  * Plugin: mysq_isam_space_ bugfix when printing "value".
  * lrrd-client/lrrd-run: Two bugfixes.
  * LRRD.pm: Change \1 to $1 to make lrrd-update shut up.
  * lrrd-update: Fix bug with timeout handling of children.

lrrd (0.9.9r4)

  * Plugin: changes from Mike Fedyk (Deb#222838, Deb#222841).
  * lrrd-cron: Check if files are executable before runinng (Deb#221691).